# System_Design

./: README.md
lab_1/: README.md  workspace.dsl
lab_2/: README.md  userver_create_service.sh
lab_2/lms_service/: CMakeLists.txt  Dockerfile  docker-compose.yaml
lab_2/lms_service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lab_2/lms_service/docs/: openapi.yaml
lab_2/lms_service/src/: main.cpp
lab_3/: README.md  optimization.md
lab_3/lms_service/: CMakeLists.txt  Dockerfile  docker-compose.yaml
lab_3/lms_service/configs/: config_vars.dev.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lab_3/lms_service/sql/: schema.sql
lab_3/lms_service/src/: main.cpp
lab_3/lms_service/tests/: test_basic.py
lab_4/: README.md  schema_design.md
lab_4/lms_service/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
lab_4/lms_service/configs/: config_vars.dev.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lab_4/lms_service/src/: main.cpp
lab_5/: README.md  performance_design.md
lab_5/lms_service/: CMakeLists.txt  Dockerfile  docker-compose.yaml
lab_5/lms_service/configs/: config_vars.dev.yaml  config_vars.testing.yaml  config_vars.yaml  secdist.dev.json  secdist.json
lab_5/lms_service/mongo/: validation.js
lab_5/lms_service/src/auth/: jwt_auth_checker.hpp
lab_5/lms_service/src/dto/: enrollment_dto.hpp
lab_5/lms_service/src/views/auth/: login_handler.cpp  login_handler.hpp
lab_5/lms_service/src/views/enrollments/: get_user_courses_handler.hpp
lab_5/lms_service/src/views/lessons/: add_lesson_handler.cpp  add_lesson_handler.hpp  list_lessons_handler.hpp
lab_5/lms_service/src/views/users/: get_user_by_login_handler.cpp  get_user_by_login_handler.hpp  search_users_handler.cpp  search_users_handler.hpp
lab_5/lms_service/tests/: test_basic.py
lab_6/: README.md  event_catalog.md  event_driven_design.md
lab_6/lms_service/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml
lab_6/lms_service/.devcontainer/: devcontainer.json
lab_6/lms_service/configs/: config_vars.command.dev.yaml  config_vars.command.yaml  config_vars.consumer.dev.yaml  config_vars.consumer.yaml  secdist.dev.json  secdist.json  static_config.command.yaml  static_config.consumer.yaml  static_config.yaml
(+88 files in other folders)
